WebCore/accessibility/AccessibilityObject.h
@@ -448,7 +448,9 @@ public:
     unsigned doAXLineForIndex(unsigned);
 
     virtual String stringValueForMSAA() const { return String(); }
+    virtual String stringRoleForMSAA() const { return String(); }
     virtual String nameForMSAA() const { return String(); }
+    virtual String descriptionForMSAA() const { return String(); }
 
 #if HAVE(ACCESSIBILITY)
 #if PLATFORM(GTK)
