WebKit/win/AccessibleBase.h
@@ -95,7 +95,6 @@ protected:
 
     virtual WebCore::String name() const;
     virtual WebCore::String value() const;
-    virtual WebCore::String description() const;
     virtual long role() const;
 
     HRESULT getAccessibilityObjectForChild(VARIANT vChild, WebCore::AccessibilityObject*&) const;
